Images folder corp renamed to brands
:-)

--- a/work.html
+++ b/work.html
@@ -43,8 +43,8 @@ logos:
 	<!--BRAND-->
 	<div id="brand" class="span9" style="padding-right:10px;">
 	{% for i in (1..24) %}
-		<a href="./img/corp/{{ i }}.jpg" class="thumb-wrap lightbox-2" rel="corp">
-        	<img class="thumb" src="./img/corp/thumbs/{{ i }}.jpg" width="200" height="160" alt="logo1">
+		<a href="./img/brands/{{ i }}.jpg" class="thumb-wrap lightbox-2" rel="brands">
+        	<img class="thumb" src="./img/brands/thumbs/{{ i }}.jpg" width="200" height="160" alt="logo1">
     	</a>
 	{% endfor %}
 	</div>	
