Margin-bottom changed

--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@ menusel: work
 logos: 
 ---
 
-<div id="container" class="row-fluid">
+<div id="container" class="row-fluid" style="margin-bottom: 50px;">
 
 	<div id="menu" class="span3" style="border-right:solid black 1px;">
 		<div class="row-fluid">
